@@ -57,6 +57,7 @@ Version 1.11.7+dev:
    * Introduced side's name in MP Connect.
    * Middle click scrolling is now based on distance from initial click instead
      of the centre of the screen.
+   * Make sliders able to be scrolled with the mouse wheel
 
 
 Version 1.11.7:
