@@ -84,6 +84,7 @@ Version 1.11.7+dev:
    * Introduced side's name in MP Connect.
    * Middle click scrolling is now based on distance from initial click instead
      of the centre of the screen.
+   * Make sliders able to be scrolled with the mouse wheel
  * WML engine:
    * WML variable turn_number is set correctly (to 1) in prestart and start
      events.  Previously, it retained its last value from the previous scenario
